--- a/mini02.qmd
+++ b/mini02.qmd
@@ -47,6 +47,7 @@ for (pkg in required_packages) {
 ```
 
 ```{r}
+
 library(ggplot2)
 library(dplyr)
 
@@ -73,7 +74,6 @@ if (!require(stringr)) {
 } else {
   library(stringr)
 }
-
 #install.packages("tidyr")
 library(tidyr)
 
@@ -468,7 +468,7 @@ cat("Mark Hamill is most known for these four projects:\n",
 5. What TV series, with more than 12 episodes, has the highest _average_
 rating? 
 
-# Find the highest average rating among these series
+Find the highest average rating among these series
 
 ```{r}
 # Count episodes per series and filter for series with more than 12 episodes
@@ -687,6 +687,24 @@ cat("\nHuge Audience: These films have hundreds of thousands of votes, showing t
 
 ```
 
+
+
+Spot Check Validation
+
+Task: Perform at least one other form of ‘spot check’ validation.
+
+To further validate Milla Jovovich’s impact in action films, here’s a spot check of her **Resident Evil** movies, showcasing how these popular films performed:
+
+- **Resident Evil** | Rating: 6.6 | Votes: 293,614 
+- **Resident Evil: Apocalypse** | Rating: 6.1 | Votes: 212,646 
+- **Resident Evil: Extinction** | Rating: 6.2 | Votes: 207,893 
+- **Resident Evil: Afterlife** | Rating: 5.8 | Votes: 181,137 
+- **Resident Evil: Retribution** | Rating: 5.3 | Votes: 152,062 
+- **Resident Evil: The Final Chapter** | Rating: 5.5 | Votes: 102,720
+
+The **Resident Evil** series showcases Milla’s consistent presence in high-action roles, with a strong fan base despite varying ratings. This confirms her staying power in the genre.
+
+
 5. Come up with a numerical threshold for a project to be a 'success'; that is,
    determine a value $v$ such that movies above $v$ are all "solid" or better.
 
@@ -766,6 +784,10 @@ print(most_successes_in_each_decade)
 
 ```
 
+
+
+
+
 ```{r}
 # Load necessary libraries
 library(ggplot2)
@@ -784,336 +806,388 @@ ggplot(most_successes_in_each_decade, aes(x = factor(decade), y = votes_per_movi
   theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Rotate x-axis labels for better visibility
 ```
 
+
+## Genre with the Most "Successes" in Each Decade
+
+When looking at the number of votes per movie, the most successful genre has changed over the decades. This shows how people's tastes in movies have changed over time:
+
+- In the **1920s**, **Sci-Fi** was the most popular genre.
+- In the **1930s** and **1940s**, **Animation** was the top genre, with many successful movies during these years.
+- By the **1980s** and **1990s**, **Adventure** movies became the favorite, continuing to be the most successful genre in the **2000s**.
+- In the **2010s**, **Sci-Fi** came back as the most successful genre.
+- In the **2020s**, **Adventure** is still very popular and leads in success.
+
+This shows how different genres have been the most successful at different times, depending on what audiences preferred during each decade.
+
+
+
+
 2. What genre consistently has the most "successes"? What genre used to reliably produced "successes" and has fallen out of favor? 
 
 ```{r}
+library(ggplot2)
+library(dplyr)
+
+# Suppress warnings globally
+options(warn = -1)
+
+# Step 1: Define the rating threshold for successful movies
+threshold_rating <- 7.5
+
+# Step 2: Filter the data to include only successful movies from 1990 onwards
+successful_movies <- TITLE_RATINGS %>%
+  inner_join(TITLE_BASICS, by = "tconst") %>%
+  filter(averageRating >= threshold_rating, as.numeric(startYear) >= 1990)
+
+# Step 3: Group by genre and year, calculate cumulative count
+successful_movies_by_genre <- successful_movies %>%
+  mutate(startYear = as.numeric(startYear)) %>%
+  separate_rows(genres, sep = ",") %>%
+  group_by(genres, startYear) %>%
+  summarize(success_count = n(), .groups = 'drop') %>%
+  arrange(genres, startYear) %>%
+  group_by(genres) %>%
+  mutate(cumulative_success = cumsum(success_count))
+
+# Step 4: Select top genres based on cumulative success
+top_genres <- successful_movies_by_genre %>%
+  group_by(genres) %>%
+  summarize(total_cumulative_success = max(cumulative_success)) %>%
+  arrange(desc(total_cumulative_success)) %>%
+  slice(1:5) %>%
+  pull(genres)
+
+# Step 5: Filter the data for the top 5 genres and plot
+plot_data_top_genres <- successful_movies_by_genre %>%
+  filter(genres %in% top_genres)
+
+# Step 6: Create a clearer plot
+ggplot(plot_data_top_genres, aes(x = startYear, y = cumulative_success, color = genres, group = genres)) +
+  geom_line(linewidth = 1.2) +
+  geom_point(size = 2, shape = 21, fill = "white", stroke = 0.5) +
+  geom_text(data = plot_data_top_genres %>% group_by(genres) %>% filter(startYear == max(startYear)),
+            aes(label = genres), vjust = -0.5, size = 3.5) +  # Add genre labels only at the end
+  labs(
+    title = "Cumulative Number of Successful Movies by Top 5 Genres (1990-2000)",
+    x = "Year",
+    y = "Cumulative Count of Successful Movies"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1),
+    plot.title = element_text(size = 18, face = "bold", hjust = 0.5),  # Center title
+    legend.position = "none"  # Remove legend since labels are used
+  ) +
+  scale_color_viridis_d(option = "plasma")
+
+
+
+
+```  
+
+### Summary of Genre Success Over Time
+
+**Historical Genre Successes by Decade**:
+   - **Animation** dominated from the **1930s to 1950s** but has fallen out of favor in recent decades.
+   - **Biography** was successful in the **1960s**, while **Sci-Fi** gained prominence in the **1970s**.
+   - **Adventure** has led from the **1980s to the 2020s**, with **Sci-Fi** showing growth since the 2000s.
+
+**Current Genre Performance (Since 2010)**:
+   - **Drama** has produced the most movies but has an average success rate.
+   - **Biography** has a higher success rate per movie, despite fewer productions.
+   - **Thriller** shows strong success per movie, even with fewer releases than Drama.
+
+**Genre That Fell Out of Favor**:
+   - **Animation**, which was once a dominant genre, especially in the mid-20th century, has seen its influence decline in recent years.
+
+**Conclusions**:
+   - **Adventure** has consistently produced successes across decades.
+   - **Animation**, despite its early dominance, has fallen out of favor.
+   - **Sci-Fi** has risen in popularity, especially in recent decades.
+
+This overview highlights **Adventure's** long-standing success, **Animation's** decline, and **Sci-Fi's** modern rise.
+
+
+
+3. What genre has produced the most “successes” since 2010? Does it have the highest success rate or does it only have a large      number of successes because there are many productions in that genre?
+  
+
+
+```{r}
 
 library(ggplot2)
 library(dplyr)
 
-# ine plot that shows the average rating of all genres starting from 1990
+# Define a rating threshold for successful movies
+threshold_rating <- 7.5
 
-# Filter the data to include only from 1990 onwards
-data_from_1990 <- most_successes_in_each_decade |>
-  filter(as.numeric(decade) >= 1990)
+# Step 1: Filter the data to include only successful movies from any year onwards
+successful_movies <- TITLE_RATINGS %>%
+  inner_join(TITLE_BASICS, by = "tconst") %>%
+  filter(averageRating >= threshold_rating)
 
-# Calculate average rating per genre per decade
-avg_rating_by_genre <- data_from_1990 |>
-  group_by(decade, genres) |>
-  summarize(avg_rating = mean(votes_per_movie, na.rm = TRUE))  # Assuming votes_per_movie represents rating
+# Step 2: Group by genre and year, calculate cumulative count of successful movies
+successful_movies_by_genre <- successful_movies %>%
+  mutate(startYear = as.numeric(startYear)) %>%   # Ensure startYear is numeric
+  separate_rows(genres, sep = ",") %>%            # Split multiple genres into separate rows
+  group_by(genres, startYear) %>%
+  summarize(success_count = n(), .groups = 'drop') %>%  # Count successful movies per genre and year
+  arrange(genres, startYear) %>%
+  group_by(genres) %>%
+  mutate(cumulative_success = cumsum(success_count))    # Calculate cumulative sum for each genre
 
-# Plot the results
-ggplot(avg_rating_by_genre, aes(x = as.numeric(decade), y = avg_rating, color = genres, group = genres)) +
+# Step 3: Capture cumulative value up to 1990 for each genre
+cumulative_up_to_1990 <- successful_movies_by_genre %>%
+  filter(startYear < 1990) %>%
+  group_by(genres) %>%
+  summarize(total_up_to_1990 = max(cumulative_success, na.rm = TRUE))
+
+# Step 4: Filter data from 1990 onwards and add the cumulative value up to 1990
+successful_movies_1990_onwards <- successful_movies_by_genre %>%
+  filter(startYear >= 1990) %>%
+  left_join(cumulative_up_to_1990, by = "genres") %>%
+  mutate(cumulative_success = cumulative_success + total_up_to_1990)
+
+# Step 5: Rank genres by total cumulative success from 1990 onwards
+final_cumulative_success <- successful_movies_1990_onwards %>%
+  group_by(genres) %>%
+  summarize(total_cumulative_success = max(cumulative_success)) %>%
+  arrange(desc(total_cumulative_success))
+
+# Step 6: Split the genres into three equal groups based on cumulative success
+n <- nrow(final_cumulative_success)
+split_size <- floor(n / 3)
+
+# Top-performing genres
+top_genres <- final_cumulative_success %>% 
+  slice(1:split_size) %>% 
+  pull(genres)
+
+# Middle-performing genres
+middle_genres <- final_cumulative_success %>%
+  slice((split_size + 1):(2 * split_size)) %>% 
+  pull(genres)
+
+# Lower-performing genres
+lower_genres <- final_cumulative_success %>%
+  slice((2 * split_size + 1):n) %>%
+  pull(genres)
+
+# Step 7: Plot the three groups of genres separately, starting from 1990
+
+# Plot 1: Top-performing genres
+top_genres_plot <- ggplot(successful_movies_1990_onwards %>% filter(genres %in% top_genres), 
+       aes(x = startYear, y = cumulative_success, color = genres, group = genres)) +
   geom_line(size = 1.2) +
   geom_point(size = 3) +
   labs(
-    title = "Average Rating by Genre (1990 Onwards)",
-    x = "Decade",
-    y = "Average Rating"
+    title = "Yearly Growth of Successful Movies - Top Genres (1990 Onwards)",
+    x = "Year",
+    y = "Cumulative Count of Successful Movies"
   ) +
   theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Rotate x-axis labels for better readability
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) 
+
+# Plot 2: Middle-performing genres
+middle_genres_plot <- ggplot(successful_movies_1990_onwards %>% filter(genres %in% middle_genres), 
+       aes(x = startYear, y = cumulative_success, color = genres, group = genres)) +
+  geom_line(size = 1.2) +
+  geom_point(size = 3) +
+  labs(
+    title = "Yearly Growth of Successful Movies - Middle Genres (1990 Onwards)",
+    x = "Year",
+    y = "Cumulative Count of Successful Movies"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) 
+
+# Plot 3: Lower-performing genres
+lower_genres_plot <- ggplot(successful_movies_1990_onwards %>% filter(genres %in% lower_genres), 
+       aes(x = startYear, y = cumulative_success, color = genres, group = genres)) +
+  geom_line(size = 1.2) +
+  geom_point(size = 3) +
+  labs(
+    title = "Yearly Growth of Successful Movies - Lower Genres (1990 Onwards)",
+    x = "Year",
+    y = "Cumulative Count of Successful Movies"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+# Display the plots
+top_genres_plot
+middle_genres_plot
+lower_genres_plot
+
+
+
 ```
 
 
-3. What genre has produced the most “successes” since 2010? Does it have the highest success rate or does it only have a large number of successes because there are many productions in that genre?
+## Genre Successes Since 2010
+
+Since 2010, **Drama** has produced the most successful movies, mainly due to the large number of productions in this genre. However, the **success rate** (average success per movie) for Drama is moderate, comparable to genres like **Thriller** and **Biography**. 
+
+On the other hand, **Biography** has fewer productions but a significantly higher success rate per movie. This means that, while there are fewer Biography films, they tend to perform better individually compared to Drama films.
+
+In conclusion, while Drama leads in terms of the total number of successful movies, other genres like Biography and Thriller achieve higher success rates, indicating that the number of movies is not always reflective of individual success.
+
+
+4. What genre has become more popular in recent years?
+
 
 ```{r}
+
 library(ggplot2)
 library(dplyr)
 
-# Step 1: Filter the data to include only from 1990 to 2020
-data_from_1990 <- most_successes_in_each_decade |>
-  filter(as.numeric(decade) >= 1990 & as.numeric(decade) <= 2020)
+# Define success threshold and filter the data for successful movies only
+threshold_rating <- 7.5
 
-# Step 2: Group by decade and genre, then count the number of movies per genre per decade
-movies_by_genre_decade <- data_from_1990 |>
-  group_by(decade, genres) |>
-  summarize(movie_count = n(), .groups = 'drop')
+# Updated valid genres list, now including "Documentary"
+valid_genres <- c("Action", "Adventure", "Animation", "Biography", "Comedy", 
+                  "Crime", "Documentary", "Drama", "Family", "Fantasy", 
+                  "Film-Noir", "History", "Horror", "Music", "Musical", 
+                  "Mystery", "Romance", "Sci-Fi", "Sport", "Thriller", 
+                  "War", "Western")
 
-# Step 3: Plot the number of movies per genre and decade
-ggplot(movies_by_genre_decade, aes(x = decade, y = movie_count, fill = genres)) +
-  geom_col(position = "dodge") +  # Bar plot with genres side by side
-  labs(
-    title = "Number of Movies by Genre and Decade (1990 to 2020)",
-    x = "Decade",
-    y = "Number of Movies"
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
-  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for better readability
-```  
+# Function to filter movies for the selected time period and valid genres
+filter_movies <- function(start_year, end_year) {
+  TITLE_BASICS %>%
+    filter(titleType == "movie", !is.na(startYear), as.numeric(startYear) >= start_year, as.numeric(startYear) <= end_year) %>%
+    inner_join(TITLE_RATINGS, by = "tconst") %>%
+    separate_rows(genres, sep = ",") %>%
+    filter(genres %in% valid_genres)  # Filter valid genres
+}
+
+# Function to plot average success rate for each period
+plot_success_rate <- function(period_name, start_year, end_year) {
+  successful_movies <- filter_movies(start_year, end_year)
   
+  # Calculate total number of movies and successful movies in each genre
+  genre_summary <- successful_movies %>%
+    group_by(genres) %>%
+    summarize(total_movies = n(),
+              successful_movies = sum(averageRating >= threshold_rating)) %>%
+    mutate(success_rate = successful_movies / total_movies) %>%
+    arrange(desc(success_rate)) %>%
+    filter(total_movies > 0) %>%  # Ensure at least one movie in the genre
+    slice_head(n = 10)  # Select top 10 genres
   
+  # Plot
+  ggplot(genre_summary, aes(x = reorder(genres, -success_rate), y = success_rate, fill = genres)) +
+    geom_bar(stat = "identity") +
+    geom_text(aes(label = scales::percent(success_rate, accuracy = 0.1)), vjust = -0.5) +
+    labs(
+      title = paste("Average Success Rate for Top 10 Genres (", period_name, ")"),
+      x = "Genres",
+      y = "Average Success Rate"
+    ) +
+    scale_y_continuous(labels = scales::percent_format(accuracy = 1)) +
+    theme_minimal(base_size = 14) +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
+}
 
-```{r}
+# Periods to analyze
+periods <- list(
+  "1900-1950" = c(1900, 1950),
+  "1950-1980" = c(1950, 1980),
+  "1980-2000" = c(1980, 2000),
+  "2000-2020" = c(2000, 2020)
+)
 
-library(ggplot2)
-library(dplyr)
-
-# Step 1: Filter the data to include only from 1990 to 2020
-data_from_1990 <- most_successes_in_each_decade |>
-  filter(as.numeric(decade) >= 1990 & as.numeric(decade) <= 2020)
-
-# Step 2: Group by decade and genre, then count the number of movies per genre per decade
-movies_by_genre_decade <- data_from_1990 |>
-  group_by(decade, genres) |>
-  summarize(movie_count = n(), .groups = 'drop')
-
-# Step 3: Plot the number of movies per genre and decade
-ggplot(movies_by_genre_decade, aes(x = decade, y = movie_count, fill = genres)) +
-  geom_col(position = "dodge") +  # Bar plot with genres side by side
-  labs(
-    title = "Number of Movies by Genre and Decade (1990 to 2020)",
-    x = "Decade",
-    y = "Number of Movies"
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
-  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for better readability
-
-
-
-
-```
-
-
-```{r}
-library(ggplot2)
-library(dplyr)
-
-# Step 1: Use all available data (remove filter)
-data_all_decades <- most_successes_in_each_decade
-
-# Step 2: Plot 1 - Number of Movies per Genre and Decade (Line Chart)
-p1 <- ggplot(data_all_decades, aes(x = as.numeric(decade), y = movie_count, color = genres, group = genres)) +
-  geom_line(size = 1.2) +  # Line chart
-  geom_point(size = 3) +   # Add points to the line chart
-  labs(
-    title = "Number of Movies by Genre and Decade",
-    x = "Decade",
-    y = "Number of Movies"
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
-  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
-
-# Step 3: Plot 2 - Total Votes per Genre and Decade (Line Chart)
-p2 <- ggplot(data_all_decades, aes(x = as.numeric(decade), y = total_votes, color = genres, group = genres)) +
-  geom_line(size = 1.2) +  # Line chart
-  geom_point(size = 3) +   # Add points to the line chart
-  labs(
-    title = "Total Votes by Genre and Decade",
-    x = "Decade",
-    y = "Total Votes"
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
-  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
-
-# Step 4: Plot 3 - Votes per Movie by Genre and Decade (Line Chart)
-p3 <- ggplot(data_all_decades, aes(x = as.numeric(decade), y = votes_per_movie, color = genres, group = genres)) +
-  geom_line(size = 1.2) +  # Line chart
-  geom_point(size = 3) +   # Add points to the line chart
-  labs(
-    title = "Votes per Movie by Genre and Decade",
-    x = "Decade",
-    y = "Votes per Movie"
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
-  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
-
-# Step 5: Plot all three charts
-print(p1)
-print(p2)
-print(p3)
-
-
-```
-
-
-
-```{r}
-
-library(ggplot2)
-library(dplyr)
-
-# Step 1: Filter data from 1990 to 2020
-data_from_1990 <- most_successes_in_each_decade %>%
-  filter(as.numeric(decade) >= 1990 & as.numeric(decade) <= 2020)
-
-# Step 2: Plot 1 - Number of Movies per Genre and Decade (Line Chart)
-p1 <- ggplot(data_from_1990, aes(x = as.numeric(decade), y = movie_count, color = genres, group = genres)) +
-  geom_line(size = 1.2) +  # Line chart
-  geom_point(size = 3) +   # Add points to the line chart
-  labs(
-    title = "Number of Movies by Genre and Decade (1990 to 2020)",
-    x = "Decade",
-    y = "Number of Movies"
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
-  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
-
-# Step 3: Plot 2 - Total Votes per Genre and Decade (Line Chart)
-p2 <- ggplot(data_from_1990, aes(x = as.numeric(decade), y = total_votes, color = genres, group = genres)) +
-  geom_line(size = 1.2) +  # Line chart
-  geom_point(size = 3) +   # Add points to the line chart
-  labs(
-    title = "Total Votes by Genre and Decade (1990 to 2020)",
-    x = "Decade",
-    y = "Total Votes"
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
-  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
-
-# Step 4: Plot 3 - Votes per Movie by Genre and Decade (Line Chart)
-p3 <- ggplot(data_from_1990, aes(x = as.numeric(decade), y = votes_per_movie, color = genres, group = genres)) +
-  geom_line(size = 1.2) +  # Line chart
-  geom_point(size = 3) +   # Add points to the line chart
-  labs(
-    title = "Votes per Movie by Genre and Decade (1990 to 2020)",
-    x = "Decade",
-    y = "Votes per Movie"
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
-  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
-
-# Step 5: Plot all three charts
-print(p1)
-print(p2)
-print(p3)
+# Generate plots for all periods and display them
+for (period_name in names(periods)) {
+  period <- periods[[period_name]]
+  print(plot_success_rate(period_name, period[1], period[2]))
+}
 
 
 
 ```
 
+# Movie Genre Success Over Time
 
-Based on your findings, select a genre for your next project. Note that you may
-wish to avoid an "oversatured" genre; you just need to make the argument that
-your proposal is a _good_ investment, not necessarily the most _studio-produced
-focus-grouped committee-designed generic satisfying_ choice, so feel free to
-lean in to your own artistic preferences, as long as you can make an argument
-for them.
+Movie genre success has changed a lot over the years, reflecting shifts in what audiences enjoy. Here's a breakdown of the most successful genres from 1900 to 2020, divided into four periods.
 
-### Successful Personnel in the Genre
+## 1900 to 1950
 
-Now that you have selected a target genre, identify two actors and one director
-who will anchor your project. You want to identify key personnel who have
-worked in the genre before, with at least modest success, and who have at least
-one major success to their credit.
+Between 1900 and 1950, **Animation (19.4%)** and **Documentary (18.6%)** were the most successful genres. Audiences enjoyed both animated films and factual storytelling, showing a mix of entertainment and learning.
 
-As you develop your team, you may want to consider the
-following possibilities: 
+## 1950 to 1980
 
-- An older established actor and an up-and-coming actor
-- An actor/director pair who have been successful together
-- An actor/director pair who are both highly successful but have never worked
-  together
-- A pair of established actors who have had success in many genres
+From 1950 to 1980, genres like **Western (46.7%)** and **War (44.1%)** were at the top. People were drawn to action-packed stories about the frontier and war, reflecting an era of adventure and heroism.
 
-As you select your key personnel, consider what IMDb says they are known for;
-this will be useful in developing your marketing materials. 
+## 1980 to 2000
 
-::: {.callout-tip}
-#### Task 5: Key Personnel
+In the 1980 to 2000 period, **Documentary (39.9%)** became the most successful, with **History** and **Music** also doing well. Audiences started to focus more on real-life stories and educational content.
 
-Identify (at least) two actors and one director who you will target as
-the key talent for your movie. Write a short "pitch" as to why they are
-likely to be successful. You should support your pitch with at least one
-graphic and one table.
-:::
+## 2000 to 2020
 
-### Nostalgia and Remakes
+Between 2000 and 2020, **Documentary (34.8%)** and **Biography (30.3%)** continued to grow in popularity. These genres show a clear shift toward real-life and factual storytelling. On the other hand, **Animation** and **Drama**, which used to be popular, are now less successful.
 
-Now that you have found a target genre and key talent for your project, you
-need a story. Like any good development executive, your first instinct should
-be to produce a remake of a classic film in the genre. 
+## Conclusion: Which Genre Has Grown in Popularity?
 
-::: {.callout-tip}
-#### Task 6: Finding a Classic Movie to Remake
+In recent years, **Documentary** and **Biography** have clearly become more popular, leading the success charts from 2000 to 2020. Audiences are showing a strong preference for content that tells real-world stories and explores real lives, while genres like Animation and Drama have seen a drop in success.
 
-Find a classic movie to remake with your key talent. The original should have
-a large number of IMDb ratings, a high average rating, and not have been remade
-in the past 25 years.[^4] 
 
-Once you have found your classic movie to remake, confirm whether key actors,
-directors, or writers from the original are still alive. If so, you need to 
-contact your legal department to ensure they can secure the rights to the 
-project. You may also want to include the classic actors as "fan service."
-:::
 
-## Putting It Together
+# Task 1: Select a Genre for Your Next Project
 
-::: {.callout-tip}
-#### Task 7: Write and Deliver Your Pitch
+**Selected Genre: Action/Sci-Fi with Superpowers**
 
-Now that you have completed your analysis, write an "elevator pitch" of 
-approximately 200-250 words for your proposed Hollywood project. This is the
-pitch you will bring to the studio head (your boss); if the studio head likes
-your pitch, you will be given a small sum of money to start securing the story
-rights and locking down tentative deals with key talent. 
+This project is a remake of a **Resident Evil** movie, but with a war theme and powerful superhuman abilities for the main characters. The genre is **Action/Sci-Fi**, blending intense action scenes with superpowers. The story will be set during the war in Ukraine, leading to an epic battle for Crimea and beyond.
 
-Your pitch needs to synthesize the analysis above into two to three quick
-and compelling points. (*E.g.*, "The market for animated young adult horror
-musicals has grown 200% in the past decade" or "Over 90% of Director D's movies
-are successes.") You need to present the strongest argument for each element
-of your pitch, including genre, director, actors, and story. 
+# Task 2: Identify Successful Personnel in the Genre
 
-If your boss approves the pitch, you will need to have a brief trailer ready
-for the next quarterly earnings call. The marketing department has asked that
-you prepare a classic 90's style teaser for them. Adapt the following
-cliched formula for your pitch. 
+**Director: Paul W.S. Anderson (Director of *Resident Evil*)**  
+- **Why Him?**: Paul W.S. Anderson directed several *Resident Evil* movies and knows how to create action-packed films with strong female leads. His experience in action and sci-fi makes him the perfect choice for this project.
+- **Notable Films**: *Resident Evil* series, *Mortal Kombat*, *Event Horizon*
 
-> From director D, the visionary mind between N1; and
-> From actor A, beloved star of N2; and
-> From actor A2, Hollywood icon of genre G,
-> Comes the timeless tail N3
-> A story of TOPIC, TOPIC, and TOPIC
-> Coming soon to a theater near you. 
+**Lead Actor: Keanu Reeves**  
+- **Why Keanu?**: Keanu Reeves is well-known for his roles in *John Wick* and *The Matrix*. He’s famous for being a kind and generous person in real life, despite personal struggles. Keanu will play **Ben**, a leader who gains Matrix-like superpowers, making him a strong and moral hero.
+- **Notable Films**: *John Wick*, *The Matrix*
 
-If you're creatively-minded, you could have some fun here using
-Generative tools to draft a script or mock up a movie poster for your
-pitch.
+**Lead Actress: Milla Jovovich**  
+- **Why Milla?**: Milla is a Ukrainian-born actress and action star, perfect for the role of **Elena**, a scientist with superhuman powers. Her action experience in *Resident Evil* and her connection to Ukraine make her ideal for the role. Her superpowers in this movie will be like “Resident Evil on steroids,” making her an unstoppable force.
+- **Notable Films**: *Resident Evil* series, *The Fifth Element*
 
-:::
+---
 
-## General Remarks
+# Task 3: Find a Classic Movie to Remake
 
-As you approach this project, recall there are no right or wrong answers. You
-are exploring data looking for _exciting_ and _actionable_ findings. You have
-several key decisions to make and you can support them with data, but the
-decisions are ultimately yours. This project is an exercise both in
-the "nuts-and-bolts" of analyzing a large data set and in using data to inform
-and refine what is ultimately still a "gut feeling" qualitative business
-decision. 
+We will remake **Resident Evil: Apocalypse** (2004). In the original movie, Alice (Milla Jovovich) fights to survive in a city overrun by a deadly virus. In this version, the story is set in war-torn Ukraine, where the main characters use their superpowers to fight back and reclaim Crimea, continuing their journey to liberate the whole of Ukraine and even Moscow.
 
-As you iterate on this project, you will see that seemingly small different
-choices can produce very different results. That's ok! As data analysts, we
-are constantly faced with small and essentially arbitrary decisions. An 
-important "meta-skill" is knowing which of these decisions radically
-change our findings and which are meaningless. (An arbitrary decision
-with no impact on the bottom line is harmless; an arbitrary decision
-that could entirely change the plan for the next ten years is a problem.)
-Our responsibility is to _clearly_ communicate these choices to our partners
-and clients: then we can receive their feedback on which way they would like
-to proceed. 
+---
 
-Working in tools like `Quarto` and `R` helps here: if
-we provide clean and reproducible code, it should be easy to modify to see
-how our final conclusions are changed. Graphics also play an essential role
-in this form of clear communication: a 'point estimate' like "Action A is
-the best" is far less interpretable than a chart showing the predicted outcomes
-of several different actions. 
+# Task 4: Write and Deliver Your Pitch
 
-As you approach this project, focus on justifying and communicating the choices
-you make. Structure your argument to communicate both key findings and uncertainties around them. Think about how you can use both document structure
-(headings vs subsections) and graphics to communicate with both clarity and nuance. 
+### Elevator Pitch:
 
-Good luck!
+*The Battle for Crimea* is an action-packed remake of *Resident Evil: Apocalypse*. Directed by Paul W.S. Anderson, the movie stars Keanu Reeves as **Ben**, a kind and brave leader who gains Matrix-like superpowers, and Milla Jovovich as **Elena**, a Ukrainian scientist whose superpowers are like “Resident Evil on steroids.” Together, they form a romantic bond and use their combined powers to reclaim Crimea. Their mission doesn’t stop there; they continue the fight to liberate Ukraine and eventually push toward Moscow, bringing a thrilling and epic conclusion to their journey. With intense action, superhuman abilities, and a powerful story of war and love, this movie will captivate audiences worldwide.
+
+---
+
+# Plot: *The Battle for Crimea* (Remake of *Resident Evil: Apocalypse*)
+
+The story begins in modern-day Ukraine, where the region of **Crimea** is under siege by Russian forces. **Ben** (Keanu Reeves) is a leader who helps protect civilians. Known for his kindness and strength, Ben has recently gained Matrix-like superpowers, making him incredibly strong, fast, and able to outsmart the enemy.
+
+**Elena** (Milla Jovovich), a Ukrainian scientist, is kidnapped by Russian forces and used in a secret experiment. The experiment gives her powers far beyond those in *Resident Evil*—making her an unstoppable force. Her abilities allow her to control her surroundings, move with incredible speed, and fight with unmatched strength.
+
+Elena escapes and joins forces with Ben. Together, they form a powerful team, both having superhuman abilities. As they reclaim Crimea, they develop a deep romantic connection. Their love and unity strengthen their resolve as they lead a resistance to liberate Ukraine.
+
+But their mission doesn’t stop with Crimea. As they gain momentum, they push further into enemy territory, continuing to free Ukrainian cities, and the movie builds toward an epic showdown in Moscow. Their final battle is not just for their homeland but for the future of freedom.
+
+---
+
+# Why This Team Works:
+
+- **Paul W.S. Anderson** has directed action-packed and sci-fi movies before, making him the right fit to lead this project.
+- **Keanu Reeves**, known for his kindness and strong action roles, will shine as Ben, a Matrix-like hero who fights for good.
+- **Milla Jovovich**, a Ukrainian-born actress, brings authenticity and power to the role of Elena, a super-powered heroine whose abilities are like “Resident Evil on steroids.”
+
+Their powerful partnership, thrilling action, and emotional journey to liberate Ukraine and beyond will create a movie that captures audiences and leaves a lasting impact.
+
 
 ------------------------------------------------------------------------
 
